HATEOAS 추가